--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node-fetch": "^2.6.12",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
@@ -38,6 +39,9 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "svix": "^1.67.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
