--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-image": "^2.22.0",
+    "@tiptap/extension-placeholder": "^2.22.0",
+    "@tiptap/react": "^2.22.0",
+    "@tiptap/starter-kit": "^2.22.0",
     "@types/node-fetch": "^2.6.12",
+    "@uploadthing/react": "^7.3.1",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
