--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "convex:dev": "convex dev",
     "convex:deploy": "convex deploy",
     "convex:dashboard": "convex dashboard",
-    "build": "prisma generate && convex deploy && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
