--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
+    "reactflow": "^11.11.4",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "resend": "^4.7.0",
@@ -75,7 +76,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.3",
-    "@types/react": "^19.0.7",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "dotenv-cli": "^8.0.0",
