--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@stripe/stripe-js": "^7.9.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-image": "^2.22.0",
     "@tiptap/extension-placeholder": "^2.26.1",
@@ -69,6 +70,7 @@
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "resend": "^4.7.0",
+    "stripe": "^18.5.0",
     "svix": "^1.67.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
