--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "resend": "^4.7.0",
+    "sonner": "^2.0.7",
     "stripe": "^18.5.0",
     "svix": "^1.67.0",
     "tailwind-merge": "^2.6.0",
