--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@stripe/stripe-js": "^7.9.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-image": "^2.26.1",
-    "@tiptap/extension-link": "^3.4.1",
+    "@tiptap/extension-link": "^2.26.1",
     "@tiptap/extension-placeholder": "^2.26.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
@@ -59,6 +59,8 @@
     "convex": "^1.25.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
+    "@langchain/core": "^0.3.28",
+    "@langchain/textsplitters": "^0.1.0",
     "langchain": "^0.3.28",
     "lucide-react": "^0.468.0",
     "nanoid": "^5.1.5",
