--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
+    "@convex-dev/rag": "^0.5.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@elevenlabs/elevenlabs-js": "^2.3.0",
     "@hookform/resolvers": "^5.1.1",
+    "@langchain/core": "^0.3.28",
+    "@langchain/textsplitters": "^0.1.0",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -59,8 +62,6 @@
     "convex": "^1.25.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
-    "@langchain/core": "^0.3.28",
-    "@langchain/textsplitters": "^0.1.0",
     "langchain": "^0.3.28",
     "lucide-react": "^0.468.0",
     "nanoid": "^5.1.5",
