--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "db:push": "prisma db push",
-    "db:pull": "prisma db pull",
-    "db:generate": "prisma generate",
-    "db:studio": "prisma studio"
+    "postinstall": "echo 'Using Convex for database'"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
@@ -29,7 +25,6 @@
     "@hookform/resolvers": "^5.1.1",
     "@langchain/core": "^0.3.28",
     "@langchain/textsplitters": "^0.1.0",
-    "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -99,7 +94,6 @@
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "prisma": "^6.9.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
