--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@langchain/core": "^0.3.28",
     "@langchain/textsplitters": "^0.1.0",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.5",
@@ -65,7 +67,7 @@
     "node-fetch": "^3.3.2",
     "openai": "^5.3.0",
     "react": "^19.0.0",
-    "react-day-picker": "^9.7.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
