--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.5.3",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
