--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@tiptap/starter-kit": "^2.26.1",
     "@types/node-fetch": "^2.6.12",
     "@uploadthing/react": "^7.3.1",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.5",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
