--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
+    "recharts": "^3.2.1",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "resend": "^4.7.0",
