--- a/package.json
+++ b/package.json
@@ -48,9 +48,13 @@
     "@stripe/react-stripe-js": "^3.9.2",
     "@stripe/stripe-js": "^7.9.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-highlight": "^2.26.1",
     "@tiptap/extension-image": "^2.26.1",
     "@tiptap/extension-link": "^2.26.1",
     "@tiptap/extension-placeholder": "^2.26.1",
+    "@tiptap/extension-task-item": "^2.26.1",
+    "@tiptap/extension-task-list": "^2.26.1",
+    "@tiptap/extension-typography": "^2.26.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
     "@types/node-fetch": "^2.6.12",
