--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
@@ -61,9 +62,11 @@
     "@uploadthing/react": "^7.3.1",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.5",
+    "canvas-confetti": "^1.9.3",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "convex": "^1.25.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
