--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22.10.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.0.2",
