--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@uploadthing/react": "^7.3.1",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.5",
+    "@vercel/analytics": "^1.5.0",
     "canvas-confetti": "^1.9.3",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
