Add Category Search and Plugin Management Features: Introduce a search input for filtering categories in both the marketplace and plugins pages, enhancing user experience. Implement new scripts for importing, clearing, and updating plugin categories, ensuring proper category mapping. Update data structures to support specific category IDs for plugins, improving overall functionality and adherence to design guidelines.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "convex:dev": "convex dev",
     "convex:deploy": "convex deploy",
     "convex:dashboard": "convex dashboard",
+    "import-plugins": "tsx scripts/import-plugins.ts",
+    "clear-plugins": "tsx scripts/clear-plugins.ts",
+    "update-plugin-categories": "npx tsx scripts/update-plugin-categories.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
