--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "@stripe/stripe-js": "^7.9.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-highlight": "^2.26.1",
-    "@tiptap/extension-image": "^2.26.1",
-    "@tiptap/extension-link": "^2.26.1",
-    "@tiptap/extension-placeholder": "^2.26.1",
+    "@tiptap/extension-image": "^2.27.1",
+    "@tiptap/extension-link": "^2.27.1",
+    "@tiptap/extension-placeholder": "^2.27.1",
     "@tiptap/extension-task-item": "^2.26.1",
     "@tiptap/extension-task-list": "^2.26.1",
     "@tiptap/extension-typography": "^2.26.1",
-    "@tiptap/react": "^2.26.1",
-    "@tiptap/starter-kit": "^2.26.1",
+    "@tiptap/react": "^2.27.1",
+    "@tiptap/starter-kit": "^2.27.1",
     "@types/node-fetch": "^2.6.12",
     "@uploadthing/react": "^7.3.1",
     "@upstash/ratelimit": "^2.0.6",
@@ -88,6 +88,7 @@
     "react-easy-crop": "^5.5.3",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
     "reactflow": "^11.11.4",
     "recharts": "^3.2.1",
     "rehype-highlight": "^7.0.2",
