--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "import-plugins": "tsx scripts/import-plugins.ts",
     "clear-plugins": "tsx scripts/clear-plugins.ts",
     "update-plugin-categories": "npx tsx scripts/update-plugin-categories.ts",
-    "build": "next build",
+    "typecheck": "tsc --noEmit",
+    "typecheck:convex": "tsc --noEmit --project convex/",
+    "typecheck:strict": "tsx scripts/type-check.ts",
+    "typecheck:safe": "npm run typecheck:convex",
+    "build": "npm run typecheck:safe && next build",
     "start": "next start",
     "lint": "next lint",
+    "check-all": "npm run typecheck:strict",
     "postinstall": "echo 'Using Convex for database'"
   },
   "dependencies": {
@@ -112,10 +117,12 @@
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.0",
     "dotenv-cli": "^8.0.0",
+    "husky": "^9.1.6",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   }
 }
