Refactor Type Checking and Build Process: Simplify the build command in package.json by removing typecheck dependencies. Update tsconfig.json to remove enhanced type checking options. Modify content generation functions to utilize simplified course detail queries, improving data retrieval efficiency. Remove unused type-check script to streamline the development process.

--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
     "update-plugin-categories": "npx tsx scripts/update-plugin-categories.ts",
     "typecheck": "tsc --noEmit",
     "typecheck:convex": "echo 'Skipping Convex typecheck due to circular dependencies'",
-    "typecheck:strict": "tsx scripts/type-check.ts",
-    "typecheck:safe": "npm run typecheck:convex",
-    "build": "npm run typecheck:safe && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "check-all": "npm run typecheck:strict",
     "postinstall": "echo 'Using Convex for database'"
   },
   "dependencies": {
