--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
     "langchain": "^0.3.28",
     "lucide-react": "^0.468.0",
     "nanoid": "^5.1.5",
-    "next": "15.3.3",
+    "next": "^15.3.6",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "openai": "^5.3.0",
-    "react": "^19.0.0",
+    "react": "^19.0.1",
     "react-day-picker": "^9.11.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.0.1",
     "react-easy-crop": "^5.5.3",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
