--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@elevenlabs/elevenlabs-js": "^2.17.0",
+    "@fal-ai/client": "^1.7.2",
     "@hookform/resolvers": "^5.1.1",
     "@langchain/core": "^0.3.28",
     "@langchain/textsplitters": "^0.1.0",
