--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@tiptap/extension-typography": "^2.26.1",
     "@tiptap/react": "^2.27.1",
     "@tiptap/starter-kit": "^2.27.1",
+    "@types/marked": "^5.0.2",
     "@types/node-fetch": "^2.6.12",
     "@uploadthing/react": "^7.3.1",
     "@upstash/ratelimit": "^2.0.6",
@@ -81,6 +82,7 @@
     "framer-motion": "^12.23.3",
     "langchain": "^0.3.28",
     "lucide-react": "^0.468.0",
+    "marked": "^17.0.1",
     "nanoid": "^5.1.5",
     "next": "^15.3.6",
     "next-themes": "^0.4.6",
