Update configuration and enhance component functionality
- Removed ESLint configuration from `next.config.ts` to streamline the build process.
- Added `isomorphic-dompurify` dependency to `package.json` and `package-lock.json` for improved HTML sanitization.
- Refactored `opengraph-image.tsx` to use `slug` directly instead of `params.slug` for better clarity.
- Updated various components to ensure consistent type usage and improved error handling.
- Enhanced the `sanitizeHtml` utility across multiple components to ensure safe HTML rendering.
- Cleaned up unused imports and improved code readability throughout the codebase.

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "convex": "^1.25.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
+    "isomorphic-dompurify": "^2.35.0",
     "langchain": "^0.3.28",
     "lucide-react": "^0.468.0",
     "marked": "^17.0.1",
@@ -111,14 +112,20 @@
     "zod": "^3.25.63"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.55.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22.10.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.0",
     "dotenv-cli": "^8.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.9",
     "husky": "^9.1.6",
     "postcss": "^8.5.3",
     "prettier": "^3.4.2",
