--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "openai": "^5.3.0",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.0.1",
