--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@hookform/resolvers": "^5.1.1",
     "@langchain/core": "^0.3.28",
     "@langchain/textsplitters": "^0.1.0",
+    "@mux/mux-node": "^12.8.1",
+    "@mux/mux-player-react": "^3.10.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
