--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
-    "@convex-dev/rag": "^0.5.2",
+    "@convex-dev/action-cache": "^0.3.0",
+    "@convex-dev/action-retrier": "^0.3.0",
+    "@convex-dev/aggregate": "^0.2.1",
+    "@convex-dev/rag": "^0.6.1",
+    "@convex-dev/rate-limiter": "^0.3.2",
+    "@convex-dev/workflow": "^0.3.3",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -80,7 +85,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "convex": "^1.25.4",
+    "convex": "^1.31.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.3",
     "isomorphic-dompurify": "^2.35.0",
