--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "types": ["node"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "desktop"],
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
