feat(api): enhance credit handling in Stripe webhook integration
- Updated the Stripe webhook to utilize a new public mutation for adding credits, improving clarity and maintainability.
- Implemented an idempotency check to prevent duplicate credit additions, enhancing the robustness of the credit system.
- Adjusted the handling of bonus credits to ensure accurate tracking and processing.
- Refactored related API definitions to align with the new mutation structure.

These changes improve the reliability of credit transactions and streamline the integration with Stripe's webhook system.

--- a/desktop/electron-builder.yml
+++ b/desktop/electron-builder.yml
@@ -12,9 +12,17 @@ files:
   - "!electron.vite.config.*"
   - "!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}"
   - "!{tsconfig.json,tsconfig.node.json}"
+  - "!binding.gyp"
+  - "build/**/*.node"
 
 asarUnpack:
   - resources/**
+  - "**/*.node"
+  - "**/bindings/**"
+  - "build/**"
+
+# Rebuild native modules for the target platform
+npmRebuild: true
 
 mac:
   category: public.app-category.music
