--- a/desktop/package.json
+++ b/desktop/package.json
@@ -6,30 +6,35 @@
   "author": "PPR Academy",
   "license": "MIT",
   "scripts": {
-    "dev": "electron-vite dev",
-    "build": "electron-vite build",
+    "dev": "npm run build:native && electron-vite dev",
+    "build": "npm run build:native && electron-vite build",
+    "build:native": "node-gyp rebuild",
     "postbuild": "electron-builder",
-    "build:mac": "electron-vite build && electron-builder --mac",
+    "build:mac": "npm run build:native && electron-vite build && electron-builder --mac",
     "build:win": "electron-vite build && electron-builder --win",
     "build:linux": "electron-vite build && electron-builder --linux",
     "preview": "electron-vite preview",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx"
+    "lint": "eslint src --ext .ts,.tsx",
+    "install": "node-gyp rebuild"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "@tanstack/react-virtual": "^3.0.0",
+    "bindings": "^1.5.0",
     "convex": "^1.17.0",
     "electron-log": "^5.0.0",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.7",
     "keytar": "^7.9.0",
     "lucide-react": "^0.309.0",
+    "node-addon-api": "^8.5.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@electron-toolkit/preload": "^3.0.0",
+    "@electron/rebuild": "^3.7.2",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
