--- a/desktop/electron-builder.yml
+++ b/desktop/electron-builder.yml
@@ -7,13 +7,14 @@ directories:
   output: dist
 
 files:
+  - "out/**/*"
+  - "build/**/*.node"
   - "!**/.vscode/*"
   - "!src/*"
   - "!electron.vite.config.*"
   - "!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}"
   - "!{tsconfig.json,tsconfig.node.json}"
   - "!binding.gyp"
-  - "build/**/*.node"
 
 asarUnpack:
   - resources/**
